samples/_failures_safe/1761074567_f1f830_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eec7afcd.c: In function ‘main’:
./samples/SAFE/__tmp_eec7afcd.c:163:16: error: missing terminating " character
  163 |         printf("Input error\n
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_eec7afcd.c:163:9: error: expected expression at end of input
  163 |         printf("Input error\n
      |         ^~~~~~
./samples/SAFE/__tmp_eec7afcd.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eec7afcd.c:163:9: error: expected declaration or statement at end of input
